Amethyst/Amethyst.g4
grammar Amethyst;

// Parser

root
    : (ns | function | structDecl | (initAssignmentStatement Semi) | Semi)* EOF
    ;

ns
    : Namespace id Semi
    ;
    
conditionalComp
    : Hash LSquareBrak (Gt | Gte | Lt | Lte) Number RSquareBrak
    ;

function
    : (functionTag | conditionalComp)* functionModifier* type name=id paramList block
    ;

functionTag
    : Hash id
    ;

functionModifier
    : Inline
    ;

block
    : LBrak statement* RBrak
    ;

structDecl
    : (Struct | Class | EntityDef) id (Implements simpleType)? LBrak (declaration | method)* RBrak
    ;

declaration
    : type RawIdentifier (Eq expression)? Semi+
    ;

method
    : (methodModifier | conditionalComp)* type RawIdentifier paramList block
    | (functionModifier | conditionalComp)* RawIdentifier paramList (Colon expression)? block
    ;

methodModifier
    : functionModifier | Virtual
    ;

statement
    : conditionalComp* ((
        initAssignmentStatement
        | expressionStatement
        | returnStatement
        | loopControlStatement
    ) Semi+
    | commandStatement
    | block
    | executeStatement
    | forStatement)
    ;

initAssignmentStatement
    : (Const | Static)* type id (Eq expression)?
    ;

expressionStatement
    : expression
    ;

commandStatement
    : Command
    ;

executeStatement
    : executeSubcommand+ statement (Else statement)?
    ;

executeSubcommand
    : (If | As | At) LParen expression RParen
    ;

forStatement
    : For LParen initAssignmentStatement? Semi cond=expression Semi it=expression RParen statement
    ;

returnStatement
    : Return (expression)?
    ;

loopControlStatement
    : Continue
    | Break;

expression
    : assignmentExpression
    ;

assignmentExpression
    : newExpression ((Eq | PlusEq | MinusEq | StarEq | SlashEq | PercentEq) expression)?
    ;

newExpression
    : logicalExpression
    | New type expressionList
    ;

logicalExpression
    : equalityExpression ((AndAnd | OrOr) equalityExpression)*
    ;

equalityExpression
    : relationalExpression ((EqEq | Neq) relationalExpression)*
    ;

relationalExpression
    : additiveExpression ((Gt | Gte | Lt | Lte) additiveExpression)*
    ;

additiveExpression
    : multiplicativeExpression ((Plus | Minus) multiplicativeExpression)*
    ;

multiplicativeExpression
    : castExpression ((Star | Slash | Mod) castExpression)*
    ;

castExpression
    : LParen type RParen castExpression
    | unaryExpression
    ;

unaryExpression
    : (PlusPlus | MinusMinus | Not | Minus | And | WeakRef | Star)* postfixExpression
    ;

postfixExpression
    : rangeExpression (
        expressionList | indexExpression | propertyExpression
    )*
    ;

indexExpression
    : LSquareBrak expression RSquareBrak
    ;

propertyExpression
    : Dot RawIdentifier
    ;

rangeExpression
    : primaryExpression (RangeOp (primaryExpression)?)?
	| RangeOp primaryExpression
    ;

primaryExpression
    : Boolean
    | id
    | String
    | Number
    | listLiteral
    | compoundLiteral
    | targetSelector
    | LParen expression RParen
    ;

listLiteral
    : LSquareBrak (expression (Comma expression)*)? RSquareBrak
    ;

compoundLiteral
    : LBrak (compoundKeyPair (Comma compoundKeyPair)*)? RBrak
    ;

compoundKeyPair
    : RawIdentifier Colon expression
    ;

targetSelector
    : TargetSelectorVariable (LSquareBrak (targetSelectorArgument (Comma targetSelectorArgument)*)? RSquareBrak)?
    ;

targetSelectorArgument
    : RawIdentifier Eq (expression | Not)?
    ;

paramList
    : LParen (paramPair (Comma paramPair)*)? RParen
    ;

paramPair
    : (paramModifier)* type id
    ;
    
abstractParamList
    : LParen (abstractParamPair (Comma abstractParamPair)*)? RParen
    ;

abstractParamPair
    : (paramModifier)* type
    ;

paramModifier
    : Macro
    ;

expressionList
    : LParen (expression (Comma expression)*)? RParen
    ;

type
    : simpleType
    | type LSquareBrak RSquareBrak
    | type LBrak RBrak
    | type And
    | type WeakRef
    | type abstractParamList
    ;

simpleType
    : id
    ;

id
    : RawIdentifier (Colon RawIdentifier)?
    ;

// Lexer

Namespace: 'namespace';
If: 'if';
As: 'as';
At: 'at';
Else: 'else';
For: 'for';
Return: 'return';
Break: 'break';
Continue: 'continue';
New: 'new';

Struct: 'struct';
Class: 'class';
EntityDef: 'entitydef';
Implements: 'implements';

Macro: 'macro';
Inline: 'inline';
Virtual: 'virtual';
Const: 'const';
Static: 'static';

Semi: ';';
Colon: ':';
Comma: ',';
LParen: '(';
RParen: ')';
LSquareBrak: '[';
RSquareBrak: ']';
LBrak: '{';
RBrak: '}';
Eq: '=';
Plus: '+';
Minus: '-';
Star: '*';
Slash: '/';
Mod: '%';
Not: '!';
PlusEq: '+=';
MinusEq: '-=';
StarEq: '*=';
SlashEq: '/=';
PercentEq: '%=';
Hash: '#';
EqEq: '==';
Neq: '!=';
Gt: '>';
Gte: '>=';
Lt: '<';
Lte: '<=';
And: '&';
AndAnd: '&&';
OrOr: '||';
PlusPlus: '++';
MinusMinus: '--';
RangeOp: '..';
Dot: '.';
WeakRef: '^';

Boolean: 'true' | 'false';
RawIdentifier: ([a-z] | [A-Z] | '_' ) ([a-z] | [A-Z] | [0-9] | '_' | '-' | '/')*;
//Identifier: ([a-z] | [A-Z] | [0-9] | '_' | '-')* ':' ([a-z] | [A-Z] | [0-9] | '_' | '-' | '/')*;
String: '"' ( ~[\\"\n\r] | '\\' [\\"] )* '"';
Command: '@/' ( ~[\n\r] )* ('\r' | '\n');
TargetSelectorVariable: '@' [praesn];

Number: '-'? (([0-9]+ [bsilfdBSILFD]?) | ([0-9]* '.' [0-9]+ [fdFD]?));

Whitespace: (' '|'\t'|'\n'|'\r')+ -> skip;
Comment: '/*' .*? '*/' -> skip;
LineComment: '//' ~[\n\r]* -> skip;
